--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.50.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"autoprefixer": "^10.4.20",
 		"svelte": "^5.48.2",
 		"svelte-check": "^4.3.5",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5.9.3",
 		"vite": "^7.3.1"
 	}
